--- a/Ui/Ui.Desktop/UserControls/TrialRollControl.xaml
+++ b/Ui/Ui.Desktop/UserControls/TrialRollControl.xaml
@@ -5,17 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:PhexensWuerfelraum.Ui.Desktop.UserControls"
              mc:Ignorable="d"
-             d:DesignHeight="30" d:DesignWidth="220">
-    <Grid MouseLeftButtonUp="RollButton_MouseLeftButtonUp">
+             d:DesignHeight="35"
+             d:DesignWidth="220">
+    <Grid MouseLeftButtonUp="RollButton_MouseLeftButtonUp" Background="Transparent">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="185" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <Viewbox Stretch="Uniform" HorizontalAlignment="Stretch" StretchDirection="DownOnly">
-            <Label Margin="2" Content="{Binding Name}" Grid.Column="0" HorizontalContentAlignment="Left" />
+        <Viewbox Grid.Column="0" Grid.Row="0" Stretch="Uniform" HorizontalAlignment="Stretch" StretchDirection="DownOnly">
+            <Border BorderBrush="{x:Null}" Height="32">
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" FontFamily="Gabriola" FontSize="23" />
+            </Border>
         </Viewbox>
-        <TextBox Margin="2" HorizontalAlignment="Right" Grid.Column="1" Height="25" Text="{Binding Value}" Width="30" MaxLines="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsEnabled="False" />
-        <!--<Image x:Name="RollButton" Source="/Resources/d20_roll.png" Opacity="0.75" Margin="2" Height="20" Width="18" MouseLeftButtonUp="RollButton_MouseLeftButtonUp" />-->
+        <TextBox HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Height="25" Text="{Binding Value}" Width="30" MaxLines="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsEnabled="False" />
     </Grid>
 </UserControl>
