--- a/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
+++ b/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
@@ -14,6 +14,7 @@
 
     <Page.Resources>
         <local:BooleanToVisibilityConverter x:Key="VisibilityConverter" />
+        <local:MessageTypeToTextConverter x:Key="MessageTypeToTextConverter" />
 
         <Style x:Key="DiceButtonStyle" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="{DynamicResource GrayBrush10}" />
@@ -97,8 +98,8 @@
                     </Grid.Resources>
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="135" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="145" />
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
@@ -116,8 +117,15 @@
                         </Grid.RowDefinitions>
 
                         <Border Grid.Row="0">
-                            <ListView x:Name="chatList" ItemsSource="{Binding ChatRoom.Messages}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" Style="{DynamicResource ChatListViewStyle}">
+                            <ListView 
+                                x:Name="chatList" 
+                                ItemsSource="{Binding ChatRoom.Messages}"
+                                HorizontalAlignment="Stretch" 
+                                VerticalAlignment="Stretch"
+                                ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                Style="{DynamicResource ChatListViewStyle}"
+                                local:ListBoxExtender.AutoScrollToEnd="True"
+                                IsSynchronizedWithCurrentItem="True">
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="{x:Type ListBoxItem}">
                                         <Setter Property="Template">
@@ -137,14 +145,14 @@
                                             <DockPanel HorizontalAlignment="Stretch">
                                                 <DockPanel>
                                                     <TextBlock
-                                                Padding="2"
+                                                Padding="2,2,0,2"
                                                 Text="{Binding Path=Username}"
                                                 Foreground="{Binding UserColor}"
                                                 FontWeight="Bold"
                                                 DockPanel.Dock="Left" />
                                                     <TextBlock
-                                                Padding="2"
-                                                Text="{Binding Path=MessageType, StringFormat={}{0}:}"
+                                                Padding="0,2,0,2"
+                                                Text="{Binding Path=MessageType, Converter={StaticResource MessageTypeToTextConverter}}"
                                                 Foreground="{Binding Path=UserColor}"
                                                 FontWeight="Bold"
                                                 DockPanel.Dock="Left" />
