--- a/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
+++ b/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="PhexensWuerfelraum.Ui.Desktop.ChatnRoll"
+﻿<Page x:Class="PhexensWuerfelraum.Ui.Desktop.ChatnRoll"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
@@ -8,7 +8,6 @@
       xmlns:usercontrols="clr-namespace:PhexensWuerfelraum.Ui.Desktop.UserControls"
       Style="{DynamicResource PageStyle}"
       mc:Ignorable="d"
-      d:DesignHeight="600" d:DesignWidth="800"
       Title="ChatnRoll"
       DataContext="{Binding ChatnRoll, Source={StaticResource Locator}}">
 
