Fixed scrolling on Chat'n'Roll page

--- a/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
+++ b/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
@@ -380,7 +380,14 @@
             </Grid>
         </StackPanel>
 
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Hidden" CanContentScroll="True" Width="{Binding ActualWidth, ElementName=TopChatContent}" Template="{StaticResource ScrollViewerHorizontalOnTopTemplate}">
+        <ScrollViewer 
+            Grid.Row="1" 
+            HorizontalScrollBarVisibility="Visible" 
+            VerticalScrollBarVisibility="Hidden" 
+            CanContentScroll="True" 
+            Width="{Binding ActualWidth, ElementName=TopChatContent}" 
+            Template="{StaticResource ScrollViewerHorizontalOnTopTemplate}"
+            PreviewMouseWheel="ListBox_PreviewMouseWheel">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Visible">
                 <StackPanel>
                     <StackPanel.Style>
